k8s/dev/k8s/fonapp/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: fonapp
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dainmusty/fonapp:latest
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fonapp   # <-- Add this line
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80


  #http://localhost:<NodePort>
